--- a/appSettings.json
+++ b/appSettings.json
@@ -1,4 +1,4 @@
 {
-  "BaseDirectory": "/media/galliumos/29C7-3439/t/notes_sync_test/",
-  "ServiceFolder": "Services"
+  "BaseDirectory": "/media/galliumos/Ventoy/proj/book_stats/",
+  "ServiceFolder": "Unit"
 }
