--- a/arch_sync.csproj
+++ b/arch_sync.csproj
@@ -14,5 +14,8 @@
     <None Update="DefaultInterfaceTemplate.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="DefaultTypeTemplate.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
