--- a/appSettings.json
+++ b/appSettings.json
@@ -1,4 +1,6 @@
 {
   "BaseDirectory": "/media/galliumos/Ventoy/proj/book_stats/",
-  "ServiceFolder": "Unit"
+  "ServiceFolder": "Unit",
+  "StartupFile" : "/media/galliumos/Ventoy/proj/notes_sync/Startup.cs",
+  "ServicesDiMarker" : "//Services DI" 
 }
