--- a/appSettings.json
+++ b/appSettings.json
@@ -2,5 +2,6 @@
   "BaseDirectory": "/media/galliumos/Ventoy/proj/notes_sync/",
   "ServiceFolder": "Service",
   "StartupFile" : "/media/galliumos/Ventoy/proj/notes_sync/Startup.cs",
-  "ServicesDiMarker" : "//Services DI" 
+  "ServicesDiMarker" : "//Services DI",
+  "ClassMethods" : "//class_methods.csv" 
 }
