--- a/arch_sync.csproj
+++ b/arch_sync.csproj
@@ -17,5 +17,8 @@
     <None Update="DefaultTypeTemplate.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="template/StaticClass.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
