--- a/appSettings.json
+++ b/appSettings.json
@@ -1,7 +1,7 @@
 {
-  "BaseDirectory": "/media/galliumos/Ventoy/proj/notes_sync/",
-  "ServiceFolder": "Service",
+  "BaseDirectory": "C:/Users/epiro/Documents/proj/aspose_snippets",
+  "ServiceFolder": "net",
   "StartupFile" : "/media/galliumos/Ventoy/proj/notes_sync/Startup.cs",
   "ServicesDiMarker" : "//Services DI",
-  "ClassMethods" : "//class_methods.csv" 
+  "ClassMethods" : "example//app_format.csv" 
 }
