--- a/arch_sync.csproj
+++ b/arch_sync.csproj
@@ -20,5 +20,8 @@
     <None Update="template/StaticClass.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="example/app_format.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
