--- a/appSettings.json
+++ b/appSettings.json
@@ -3,5 +3,7 @@
   "ServiceFolder": "net",
   "StartupFile" : "/media/galliumos/Ventoy/proj/notes_sync/Startup.cs",
   "ServicesDiMarker" : "//Services DI",
-  "ClassMethods" : "example//app_format.csv" 
+  "ClassMethods" : "example//app_format.csv",
+  "MethodCallMarker" : "//call method",
+  "WorkFile" : "Program.cs"
 }
