--- a/appSettings.json
+++ b/appSettings.json
@@ -5,5 +5,6 @@
   "ServicesDiMarker" : "//Services DI",
   "ClassMethods" : "example//app_format.csv",
   "MethodCallMarker" : "//call method",
-  "WorkFile" : "Program.cs"
+  "WorkFile" : "C:/Users/epiro/Documents/proj/aspose_snippets/net/watermark/Program.cs",
+  "RecordFilter" : "Watermark"
 }
