--- a/appSettings.json
+++ b/appSettings.json
@@ -6,5 +6,6 @@
   "ClassMethods" : "example//app_format.csv",
   "MethodCallMarker" : "//call method",
   "WorkFile" : "C:/Users/epiro/Documents/proj/aspose_snippets/net/split/Program.cs",
-  "RecordFilter" : "Split"
+  "RecordFilter" : "Split",
+  "Snippet" : "template/OpenFile.txt"
 }
