--- a/appSettings.json
+++ b/appSettings.json
@@ -1,6 +1,6 @@
 {
-  "BaseDirectory": "C:/Users/epiro/Documents/proj/aspose_snippets",
-  "ServiceFolder": "net",
+  "BaseDirectory": "C:/Users/epiro/Documents/proj/aspose_snippets/net",
+  "ServiceFolder": "split",
   "StartupFile" : "/media/galliumos/Ventoy/proj/notes_sync/Startup.cs",
   "ServicesDiMarker" : "//Services DI",
   "ClassMethods" : "example//app_format.csv",
