--- a/appSettings.json
+++ b/appSettings.json
@@ -1,7 +1,7 @@
 {
-  "BaseDirectory": "C:/Users/epiro/Documents/proj/aspose_snippets/net",
-  "ServiceFolder": "split",
-  "StartupFile" : "/media/galliumos/Ventoy/proj/notes_sync/Startup.cs",
+  "BaseDirectory": "C:/Users/epiro/Documents/proj/rules_of_seo/Validation",
+  "ServiceFolder": "Rules",
+  "StartupFile" : "C:/Users/epiro/Documents/proj/rules_of_seo/Startup.cs",
   "ServicesDiMarker" : "//Services DI",
   "ClassMethods" : "example//app_format.csv",
   "MethodCallMarker" : "//call method",
