--- a/appSettings.json
+++ b/appSettings.json
@@ -1,11 +1,11 @@
 {
-  "BaseDirectory": "C:/Users/epiro/Documents/proj/rules_of_seo/Validation",
-  "ServiceFolder": "Rules",
-  "StartupFile" : "C:/Users/epiro/Documents/proj/rules_of_seo/Startup.cs",
-  "ServicesDiMarker" : "//Services DI",
-  "ClassMethods" : "example//app_format.csv",
-  "MethodCallMarker" : "//call method",
-  "WorkFile" : "C:/Users/epiro/Documents/proj/aspose_snippets/net/split/Program.cs",
-  "RecordFilter" : "Split",
-  "Snippet" : "template/OpenFile.txt"
+  "BaseDirectory": "E:\\w\\aspose_snippets\\",
+  "ServiceFolder": "java",
+  "StartupFile": "C:/Users/epiro/Documents/proj/rules_of_seo/Startup.cs",
+  "ServicesDiMarker": "//Services DI",
+  "ClassMethods": "example//app_format.csv",
+  "MethodCallMarker": "//call method",
+  "WorkFile": "C:/Users/epiro/Documents/proj/aspose_snippets/net/split/Program.cs",
+  "RecordFilter": "Split",
+  "Snippet": "template/OpenFile.txt"
 }
