--- a/appSettings.json
+++ b/appSettings.json
@@ -1,11 +1,13 @@
 {
-  "BaseDirectory": "E:\\w\\aspose_snippets\\",
-  "ServiceFolder": "java",
+  "BaseDirectory": "C:/Users/epiro/Documents/proj/aspose_snippets/",
+  "ServiceFolder": "cpp",
   "StartupFile": "C:/Users/epiro/Documents/proj/rules_of_seo/Startup.cs",
   "ServicesDiMarker": "//Services DI",
-  "ClassMethods": "example//app_format.csv",
+  "ClassMethods": "./example//app_format.csv",
   "MethodCallMarker": "//call method",
   "WorkFile": "C:/Users/epiro/Documents/proj/aspose_snippets/net/split/Program.cs",
   "RecordFilter": "Split",
-  "Snippet": "template/OpenFile.txt"
+  "Template" : "./template/Method.cpp.txt",
+  "Snippet": "./template/OpenFile.txt",
+  "Lang": "cpp"
 }
