--- a/appSettings.json
+++ b/appSettings.json
@@ -1,6 +1,6 @@
 {
-  "BaseDirectory": "C:/Users/epiro/Documents/proj/aspose_snippets/",
-  "ServiceFolder": "cpp",
+  "BaseDirectory": "/data/data/com.termux/files/home/storage/downloads/bouquinist",
+  "ServiceFolder": "Services",
   "StartupFile": "C:/Users/epiro/Documents/proj/rules_of_seo/Startup.cs",
   "ServicesDiMarker": "//Services DI",
   "ClassMethods": "./example//app_format.csv",
